<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/usuario_txtNome"
            style="@style/NomeDosCampos"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usuario_edtNome"
            android:inputType="text"/>

        <TextView
            android:text="@string/usuario_txtLogin"
            style="@style/NomeDosCampos"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usuario_edtLogin"
            android:inputType="text"/>

        <TextView
            android:text="@string/usuario_txtSenha"
            style="@style/NomeDosCampos"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario_txtSenha"
            android:id="@+id/usuario_edtSenha"
            android:inputType="textPassword"/>




    </LinearLayout>



</ScrollView>
